// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redeem Yield should render Redeem Yield Screen 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-pcr0fy-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter css-1jsxebx-MuiTypography-root"
        data-testid="redeemable-balance"
      >
        100
         sOHM
      </h3>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter subtext css-4p4edz-MuiTypography-root"
      >
        Redeemable Yield
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-1bxbb5o-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1wp2vw1-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Button-root undefined css-8aw5i7-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Redeem Yield
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
    >
      <div
        class="grey-box  MuiBox-root css-h33641"
      >
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              Deposited sOHM
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            1,000 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              Redeemable Amount
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            100 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              Next Reward Amount
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            2.1469 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              Next Reward Yield
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            0.2146%
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              ROI (5-Day Rate)
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            3.2692%
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
    />
  </div>
</div>
`;

exports[`Redeem Yield should show extra content if project wallet 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-pcr0fy-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter css-1jsxebx-MuiTypography-root"
        data-testid="redeemable-balance"
      >
        100
         sOHM
      </h3>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter subtext css-4p4edz-MuiTypography-root"
      >
        Redeemable Yield
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-1bxbb5o-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1wp2vw1-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Button-root undefined css-8aw5i7-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Redeem Yield
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-mbtiqp-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-eb6htm-MuiGrid-root"
        >
          <div
            class="grey-box  MuiBox-root css-h33641"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter css-12hqd1x-MuiTypography-root"
            >
              200
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter subtext css-4p4edz-MuiTypography-root"
            >
              sOHM Goal
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-eb6htm-MuiGrid-root"
        >
          <div
            class="grey-box  MuiBox-root css-h33641"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter css-12hqd1x-MuiTypography-root"
              data-testid="project-deposit"
            >
              1,000
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter subtext css-4p4edz-MuiTypography-root"
            >
              Total sOHM Donated
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-eb6htm-MuiGrid-root"
        >
          <div
            class="grey-box  MuiBox-root css-h33641"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter css-12hqd1x-MuiTypography-root"
              data-testid="project-goal-achievement"
            >
              500
              %
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter subtext css-4p4edz-MuiTypography-root"
            >
              of sOHM Goal
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
    >
      <div
        class="grey-box  MuiBox-root css-h33641"
      >
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              Deposited sOHM
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            1,000 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              Redeemable Amount
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            100 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              Next Reward Amount
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            2.1469 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              Next Reward Yield
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            0.2146%
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              ROI (5-Day Rate)
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            3.2692%
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
    />
  </div>
</div>
`;

exports[`Redeem Yield should show redeemable balance as 100 sOHM 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-pcr0fy-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter css-1jsxebx-MuiTypography-root"
        data-testid="redeemable-balance"
      >
        100
         sOHM
      </h3>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter subtext css-4p4edz-MuiTypography-root"
      >
        Redeemable Yield
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-1bxbb5o-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1wp2vw1-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Button-root undefined css-8aw5i7-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Redeem Yield
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-cm1570-MuiGrid-root"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-bhsuuc-MuiGrid-root"
    >
      <div
        class="grey-box  MuiBox-root css-h33641"
      >
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              Deposited sOHM
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            1,000 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              Redeemable Amount
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            100 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              Next Reward Amount
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            2.1469 sOHM
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              Next Reward Yield
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            0.2146%
          </p>
        </div>
        <div
          class="DataRow-root data-row css-19fvmib"
        >
          <div
            class="MuiBox-root css-1xhj18k"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            >
              ROI (5-Day Rate)
            </p>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
            style="text-align: right;"
          >
            3.2692%
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-159wrwf-MuiGrid-root"
    />
  </div>
</div>
`;
